--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "dev": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@vercel/kv": "^3.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "uuid": "^9.0.0"
   },
   "engines": {
