--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,14 @@
         {
             "src": "/api/(.*)",
             "dest": "/api/index.js"
+        },
+        {
+            "src": "/",
+            "dest": "/public/index.html"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/public/$1"
         }
     ]
 }
